package PbTest;

message TestMessage {
  required string clientName = 1;
  required int32 clientId = 2;
  optional string description = 3 [default = "NONE"];
  repeated MsgItem messageItems = 4;

  enum TType {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
  }

  message MsgItem {
    required int32 id = 1;
    optional string itemName = 2;
    optional int32 itemValue = 3;
    optional TType transaction_type = 4;
  }

  service PbService {
    rpc summate (TestMessage) returns (PbResponse);
  }
}
